Fixed spacing bug, styles

--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,10 @@ nav .nav-items-container .text.light-mode {
 }
 nav .nav-items-container .icons-container {
   position: relative;
+  height: 0.5rem;
+  width: 0.5rem;
+  display: grid;
+  place-items: center;
 }
 nav .nav-items-container .sun-container {
   transition: all 1s ease-out;
@@ -103,7 +107,6 @@ nav .nav-items-container .moon-container.moved {
 nav .nav-items-container .moon-container .moon-icon {
   height: 25px;
   width: 25px;
-  cursor: pointer;
   margin-right: 0.25rem;
   opacity: 1;
   transition: all 1s ease-out;
